--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -1,6 +1,20 @@
+/* ------------- NAVBAR -------------  */
+.navbar {
+  width: 100%;
+  background-color: transparent;
+  transition: background-color 0.3s ease;
+  z-index: 999;
+}
+
+/* ------------- HERO SECTION -------------  */
+
 .heroSection_banner {
-  background-image: url("https://cdn.shopify.com/s/files/1/0852/5099/8550/files/slide02.jpg?v=1719428238");
+  background-image: url("https://cdn.shopify.com/s/files/1/0852/5099/8550/files/slide03.jpg?v=1719430931");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+.card {
+  box-shadow: 0 0 50px 7px #ebcfa7;
 }
