--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,3 +66,28 @@ body::-webkit-scrollbar-thumb {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+/* ----------------- HOVER BUTTON CSS ----------------- */
+
+.hover_button {
+  padding: 0.55rem 1.8em;
+  border: 2px solid #9f8054;
+  position: relative;
+  overflow: hidden;
+  background-color: transparent;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-family: inherit;
+  color: #9f8054;
+  transition: 0.4s ease-in-out;
+}
+
+.hover_button:hover {
+  background-color: #9f8054;
+  color: #fff;
+}
+
+.card {
+  box-shadow: 0 0 45px 3px #ebcfa7;
+}
