--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -18,3 +18,22 @@
 .card {
   box-shadow: 0 0 45px 3px #ebcfa7;
 }
+
+
+
+.arrow1 {
+  animation: slide1 1s ease-in-out infinite;
+  margin-left: 9px;
+}
+
+
+@keyframes slide1 {
+  0%,
+  100% {
+    transform: translate(0, 0);
+  }
+
+  50% {
+    transform: translate(10px, 0);
+  }
+}
